<resources>
    <string name="app_name">Christmas Quest</string>

    <!-- Generic -->
    <string name="generic_next">Suivant</string>
    <string name="generic_start">Commencer</string>
    <string name="generic_error">Une erreur est survenue</string>
    <string name="generic_pseudo">Pseudo</string>
    <string name="generic_password">Mot de passe</string>
    <string name="generic_check">Valider</string>
    <string name="generic_your_answer">Votre réponse</string>

    <!-- Generic Achievement -->
    <string name="achievement_enigma_first">Bravo, tu as terminé la 1ère énigme !</string>
    <string name="achievement_enigma_second">Bravo, tu as terminé la 2ème énigme !</string>
    <string name="achievement_enigma_third">Bravo, tu as terminé la 3ème énigme !</string>
    <string name="achievement_secret_gift">Bravo, tu as trouvé le secret des cadeaux !</string>
    <string name="achievement_secret_tinsel">Bravo, tu as réussi à rallumer la guirlande !</string>
    <string name="achievement_secret_star">Bravo, tu as réussi à raviver toutes les étoiles !</string>

    <!-- Date/time format -->
    <string name="date_format_dd_MMMM_yyyy_at_HH_mm">dd MMMM yyyy \'à\' HH:mm</string>

    <!-- Home -->
    <string name="on_boarding_description_step_1">Nous sommes tous d\'accord pour dire que Noël c\'est avant tout un sapin !</string>
    <string name="on_boarding_description_step_2">Mais que si des cadeaux se trouvent dessous, c\'est encore mieux !</string>
    <string name="on_boarding_description_step_3">Oh Oh Oh ! Il est adorable ! ... Ah non je ne parle pas de vous !</string>
    <string name="on_boarding_description_step_4">Vous ressemblez plutôt à ça ! Et je vais avoir besoin de votre aide !</string>
    <string name="on_boarding_description_step_5">Comme vous pouvez le constater, ma hotte est vide !\nQuel drâme Ho Ho Ho !\n\nJe vais avoir besoin de vous pour finir de préparer les cadeaux !</string>
    <string name="on_boarding_description_step_6">Les cadeaux ci-dessus ne sont pas prêt !\n\nDépêche toi d\'aider les autres lutins !\n\nOu bien Noël ne pourra pas se faire !</string>

    <!-- Rules -->
    <string name="rules_title">Les règles et infos</string>
    <string name="rules_description_1">1. Soit attentif aux moindres détails</string>
    <string name="rules_description_2">2. Ouvre suffisamment ton esprit</string>
    <string name="rules_description_3">3. Si tu bloques, ce n\'est pas la faute de l\'appli</string>
    <string name="rules_description_4">4. Certains détails ne seront visibles qu\'une seule fois !</string>
    <string name="rules_description_5">5. Sauve Noël bien sûr !</string>

    <!-- Login Register -->
    <string name="login_register_title">Nous avons besoin de savoir qui vous êtes !</string>
    <string name="login_register_subtitle">Si vous possédez déjà un numéro de matricule, connectez-vous avec, sinon créez-en un nouveau !</string>
    <string name="login_register_login">Me connecter</string>
    <string name="login_register_register">M\'inscrire</string>

    <!-- Login  -->
    <string name="login_title">Donc nous sommes censés vous connaître ?</string>
    <string name="login_description_before">Nous allons vérifer si votre numéro de matricule de Lutin est connu des services du Père Noël</string>
    <string name="login_description_after_fail">Numéro non reconnu, veuillez compléter l\'identification ci-dessous</string>
    <string name="login_description_after_success">Par chance vous avez déjà travaillé pour nous de manière bénévole et SANS Y AVOIR ETE FORCE, veuillez complétez votre code d\'accès</string>
    <string name="login_success">Heureux de vous revoir parmis nous !</string>
    <string name="login_no_account_found">Aucun compte ne correspond à ces informations</string>

    <!-- Register -->
    <string name="register_title">Bienvenue parmi nous nouvelle recrue !</string>
    <string name="register_subtitle">Veuillez saisir ci-dessous le matricule que vous souhaitez utiliser</string>
    <string name="register_pseudo_already_exist_error">Un compte existe déjà avec ce pseudo</string>
    <string name="register_success">Bienvenue parmi nous !</string>

    <!-- Home -->
    <string name="home_task_to_do">Les tâches à accomplir</string>
    <string name="home_enigma_title_1">Le Pôle Nord</string>
    <string name="home_enigma_subtitle_1">Mais où peut-il bien être caché ce Père Noel ?</string>
    <string name="home_enigma_title_2">La Fouille</string>
    <string name="home_enigma_subtitle_2">Tout le monde a le droit d\'être un peu curieux !</string>
    <string name="home_enigma_title_3">L\'Atelier</string>
    <string name="home_enigma_subtitle_3">Votre aide semble être la bienvenue !</string>
    <string name="home_enigma_prerequisite_enigma_1">Tu dois d\'abord terminer la première énigme !</string>
    <string name="home_enigma_prerequisite_enigma_2">Tu dois d\'abord terminer la deuxième énigme !</string>

    <!-- Enigma Item -->
    <string name="enigma_number">Enigme n°%s:</string>

    <!-- Enigma 1 Step 1 -->
    <string name="enigma1_step1_title">Enigme 1: 1ère étape</string>
    <string name="enigma1_step1_text">Pour vous guider vers la maison du Père Noël, on vous a prêté une drôle de boussole: elle n’indique pas de direction !\n\nA vrai dire elle ressemble plus à une boule de neige qu’à une boussole…\n\nIl doit bien y avoir une façon de la faire fonctionner, non?</string>

    <!-- Enigma 1 Step 2 -->
    <string name="enigma1_step2_title">Enigme 1: 2ème étape</string>
    <string name="enigma1_step2_text">Il commence à faire sombre…\n\nLa nuit tombe et au pôle nord il n’y a pas de lampadaires !\n\nVous ne voyez plus rien, comment faire pour vous repérer dans cette obscurité ... ?</string>
    <string name="enigma1_step2_no_flash">Pour cette étape il fallait activer le flash de votre smartphone. Cependant le votre n\'en a pas. Par conséquent, vous pouvez cliquer sur le bouton ci-dessous pour passer à l\'étape suivante !</string>

    <!-- Enigma 1 Step 3 -->
    <string name="enigma1_step3_title">Enigme 1: 3ème étape</string>
    <string name="enigma1_step3_text">Vous êtes devant la porte du repaire du Père Noël, mais il n’y a ni poignée ni sonnette.\nDevant la porte se trouve le calendrier de l’avant du Père Noël.\nDerrière ce calendrier se trouve la liste de mots suivante:</string>
    <string name="enigma1_step3_word_1">SAMARITAIN</string>
    <string name="enigma1_step3_word_2">RUDIMENTAIRE</string>
    <string name="enigma1_step3_word_3">LUNATIQUE</string>
    <string name="enigma1_step3_word_4">FLEMMARD</string>
    <string name="enigma1_step3_word_5">CHIMERIQUE</string>
    <string name="enigma1_step3_word_6">MAJEUR</string>
    <string name="enigma1_step3_text_2">Il y a un 7ème emplacement vide, quel mot seriez-vous tenter d\'écrire pour compléter la liste ?\n(Plusieurs réponses possibles)</string>
    <string name="enigma1_step3_answer_invalid">Le mot que vous avez choisi ne convient pas !</string>

    <!-- Enigma 2 Step 1 -->
    <string name="enigma2_step1_title">Enigme 2: 1ère étape</string>
    <string name="enigma2_step1_text">Vous venez d\'entrer dans la maison du Père Noël, mais tout est en vrac !\n\nVous commencez à faire un rangement rapide pour pouvoir avancer, lorsque vous tombez sur un document qui semble représenter un moyen de transport peu commun.\nVous ne distinguez que très difficilement quelques lettres.\n\nSauriez-vous recomposer le mot ?</string>
    <string name="enigma2_step1_answer_invalid">Le mot que vous avez renseigné ne convient pas !</string>

    <!-- Enigma 2 Step 2 -->
    <string name="enigma2_step2_title">Enigme 2: 2ème étape</string>
    <string name="enigma2_step2_text">Vous tombez sur un vieux bouquin qui parlent d\'oiseaux, mais vous n\'y comprenais pas grand chose. Peut-être que tout cela signifie vraiment quelque chose finalement ?</string>
    <string name="enigma2_step2_text_2">Le corps aérodynamique et une forte musculature pectorale sont également des facteurs favorables au vol, ce qui profite bien évidemment aux oiseaux de toutes espèces. Mais est-ce que l’on doit pour autant s’arrêter là ? Les études pointant du doigt les effets de l’agriculture intensive et de l’utilisation massive de pesticides sur la biodiversité se multiplient. Les pingouins ont généralement les caractéristiques générales des oiseaux de la famille des Alcidae. Mais pourquoi les oiseaux volent ?</string>
    <string name="enigma2_step2_text_2_part_1">est-ce que</string>
    <string name="enigma2_step2_text_2_part_2">Les pingouins</string>
    <string name="enigma2_step2_text_2_part_3">volent</string>
    <string name="enigma2_step2_answer_invalid">Ce n\'est pas la réponse attendue !</string>

    <!-- Enigma 2 Step 3 -->
    <string name="enigma2_step3_title">Enigme 3: 3ème étape</string>
    <string name="enigma2_step3_text">Il y en a des choses plutôt intéressantes parmi toute cette paperasse ! Même des documents historiques, mais pourquoi sont-ils tous rassemblés ici ?</string>
    <string name="enigma2_step3_text_choice_1">Charlemagne est sacré empereur d\'occident à Rome</string>
    <string name="enigma2_step3_text_choice_2">Jonction du tunnel de service sous la Manche</string>
    <string name="enigma2_step3_text_choice_3">Début de la fin de l\'URSS en 1991</string>
    <string name="enigma2_step3_text_choice_4">Naissance de Jésus Christ </string>
    <string name="enigma2_step3_text_choice_5">Premier numéro du journal le Monde en 1944</string>
    <string name="enigma2_step3_text_choice_6">Abolition de l\'esclavage aux États-Unis</string>
    <string name="enigma2_step3_text_choice_7">Inauguration du Viaduc de Millau en 2004</string>
    <string name="enigma2_step3_text_choice_8">Premier lancement d\'essai de la fusée Ariane en 1979</string>
    <string name="enigma2_step3_text_choice_9">Washington est choisie pour être la capitale des États-Unis</string>
    <string name="enigma2_step3_text_choice_10">Pierre et Marie Curie découvre le radium</string>
    <string name="enigma2_step3_answer_invalid">Raté ! Encore un petit effort, il doit bien y avoir une raison ?</string>

    <!-- Enigma 3 Step 1 -->
    <string name="enigma3_step1_title">Enigme 3: 1ère étape</string>
    <string name="enigma3_step1_text">Vous voici dans l’usine à cadeaux! Les lutins se sont déjà attelés à la tâche !\n\nIls sont sacrément motivés, sans doute grâce à la musique qu’ils chantent à tue-tête.\n\nPour les aider, pouvez vous déterminer le nombre de cadeaux qu’il reste à fabriquer?</string>
    <string name="enigma3_step1_answer_invalid">Ce n\'est pas le bon nombre de cadeaux !</string>

    <!-- Enigma 3 Step 2 -->
    <string name="enigma3_step2_title">Enigme 3: 2ème étape</string>
    <string name="enigma3_step2_text">Belle trouvaille, ça en fait du boulot tout ça !\n\nVous voyez que les lutins commencent à fatiguer, ils ont besoin de retrouver le rythme. Certains disent que leur chanson fétiche cache un autre secret, celui de leur incroyable capacité de travail.\n\nSaurez-vous le décoder?</string>
    <string name="enigma3_step2_answer_invalid">Non c\'est pas ça ! Cherche encore !</string>

    <!-- Enigma 3 Step 3 -->
    <string name="enigma3_step3_title">Enigme 3: 3ème étape</string>
    <string name="enigma3_step3_text">Bien joué !\n\nAprès avoir ravitaillé les lutins en café, ils reprennent une cadence folle de fabrication.\n\nUne dernière chose reste à régler: où doit-on livrer ces 3165 cadeaux?</string>
    <string name="enigma3_step3_answer_invalid">Je suis presque sûr que ce n\'est pas le bon lieu !</string>
    <string name="enigma3_step3_location">45°46\'47.0\"N 3°05\'11.6\"E</string>

</resources>