<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
        android:paddingVertical="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/rules_title"
            android:textAppearance="@style/AppTheme.TextAppearance.Christmas"
            android:textColor="@color/colorAccent"
            android:textSize="32sp" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="32dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_christmas_card" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/rules_description_1"
            android:textAppearance="@style/AppTheme.TextAppearance.Regular"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/rules_description_2"
            android:textAppearance="@style/AppTheme.TextAppearance.Regular"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/rules_description_3"
            android:textAppearance="@style/AppTheme.TextAppearance.Regular"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/rules_description_4"
            android:textAppearance="@style/AppTheme.TextAppearance.Regular"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonRulesStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/generic_start"
            android:textAllCaps="true"
            android:textAppearance="@style/AppTheme.TextAppearance.Regular"
            app:icon="@drawable/ic_timer"
            app:iconGravity="end"
            app:iconTint="@color/colorAccent" />

    </LinearLayout>

</ScrollView>