<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
        android:paddingVertical="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_title"
            android:textAppearance="@style/AppTheme.TextAppearance.Christmas"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/register_subtitle"
            android:textAppearance="@style/AppTheme.TextAppearance.Regular"
            android:textColor="@color/colorAccent"
            android:textSize="13sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutRegisterPseudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/generic_pseudo"
            app:startIconDrawable="@drawable/ic_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextRegisterPseudo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:textAppearance="@style/AppTheme.TextAppearance.Regular"
                android:textColor="@color/colorAccent"
                android:textCursorDrawable="@drawable/cursor_custom" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/generic_password"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_padlock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:textAppearance="@style/AppTheme.TextAppearance.Regular"
                android:textColor="@color/colorAccent"
                android:textCursorDrawable="@drawable/cursor_custom" />

        </com.google.android.material.textfield.TextInputLayout>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/buttonRegisterValidate"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:paddingHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/shape_background_button_loader"
            android:enabled="false"
            android:text="@string/generic_check"
            android:textColor="@color/colorAccent"
            app:finalCornerAngle="40dp"
            app:initialCornerAngle="40dp"
            app:spinning_bar_color="@color/colorAccent"
            app:spinning_bar_padding="4dp"
            app:spinning_bar_width="3dp" />

    </LinearLayout>

</ScrollView>