<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:adjustViewBounds="true"
            android:padding="20dp"
            android:rotation="-125"
            android:src="@drawable/ic_gift_1"
            android:translationX="35dp"
            android:translationY="-35dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="32dp"
            android:paddingVertical="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enigma2_step2_text"
                android:textAppearance="@style/AppTheme.TextAppearance.Regular"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewEnigma2Step2Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textAppearance="@style/AppTheme.TextAppearance.Regular"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                tools:text="@string/enigma2_step2_text_2" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEnigma2Step2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/generic_your_answer">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextEnigma2Step2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:textAppearance="@style/AppTheme.TextAppearance.Regular"
                    android:textColor="@color/colorAccent"
                    android:textCursorDrawable="@drawable/cursor_custom" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonEnigma2Step2Check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/generic_check"
                app:icon="@drawable/ic_arrow_right_full"
                app:iconGravity="end"
                app:iconTint="@color/colorAccent" />

        </LinearLayout>

    </FrameLayout>

</ScrollView>