<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="32dp"
            android:paddingVertical="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enigma3_step3_text"
                android:textAppearance="@style/AppTheme.TextAppearance.Regular"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEnigma3Step3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/generic_your_answer">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextEnigma3Step3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:textAppearance="@style/AppTheme.TextAppearance.Regular"
                    android:textColor="@color/colorAccent"
                    android:textCursorDrawable="@drawable/cursor_custom" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonEnigma3Step3Check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/generic_check"
                app:icon="@drawable/ic_arrow_right_full"
                app:iconGravity="end"
                app:iconTint="@color/colorAccent" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewEnigma3Step3Location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:rotation="90"
            android:text="@string/enigma3_step3_location"
            android:textAppearance="@style/AppTheme.TextAppearance.Regular"
            android:textColor="@color/colorAccent"
            android:textSize="11sp"
            android:translationX="50dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>