<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
        android:paddingVertical="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enigma2_step3_text"
            android:textAppearance="@style/AppTheme.TextAppearance.Regular"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewEnigma2Step3Events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:nestedScrollingEnabled="false"
            android:overScrollMode="never" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEnigma2Step3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/generic_your_answer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextEnigma2Step3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:textAppearance="@style/AppTheme.TextAppearance.Regular"
                android:textColor="@color/colorAccent"
                android:textCursorDrawable="@drawable/cursor_custom" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonEnigma2Step3Check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/generic_check"
            app:icon="@drawable/ic_arrow_right_full"
            app:iconGravity="end"
            app:iconTint="@color/colorAccent" />

    </LinearLayout>

</ScrollView>